Implemented the routes with openapi can connected it within route.go and tested the worker, api and redis with docker-compose
