# internal/router/job.go
@@ -3,7 +3,9 @@ package routes
 import (
 	"net/http"
 
+	"github.com/Jeremiah-Williams1/inference-orchestrator/internal/api"
 	"github.com/gin-gonic/gin"
+	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
 // Job handlers live here.
@@ -24,18 +26,18 @@ func (s *routerImpl) SubmitJob(c *gin.Context) {
 	s.job.SubmitJob(c)
 }
 
-func (s *routerImpl) GetJobResult(c *gin.Context) {
+func (s *routerImpl) GetJobResult(c *gin.Context, id openapi_types.UUID) {
 	if s.job == nil {
 		c.JSON(http.StatusServiceUnavailable, gin.H{"message": "Service Unavaiilable", "code": "Server Error"})
 		return
 	}
-	s.job.GetJobResult(c)
+	s.job.GetJobResult(c, id)
 }
 
-func (s *routerImpl) GetQueueDepth(c *gin.Context) {
+func (s *routerImpl) GetQueueDepth(c *gin.Context, pType api.GetQueueDepthParamsType) {
 	if s.job == nil {
 		c.JSON(http.StatusServiceUnavailable, gin.H{"message": "Service Unavaiilable", "code": "Server Error"})
 		return
 	}
-	s.job.GetQueueDepth(c)
+	s.job.GetQueueDepth(c, pType)
 }
